<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="wildlogic.fishlog.MapActivity" />

    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/recenterButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:clickable="true"
            android:textSize="28dp"
            android:text="@string/recenter"
            android:onClick="recenterMap"
            />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:clickable="true"
            android:onClick="refreshMapButtonClicked"
            android:textSize="28sp"
            android:text="@string/refresh"
            android:layout_below="@+id/recenterButton"
            />

        <Button
            android:id="@+id/changeFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:clickable="true"
            android:onClick="changeFilterButtonClicked"
            android:textSize="28sp"
            android:text="@string/change_filter"
            android:layout_below="@+id/refreshButton"
            />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/backButtonRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/backButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:width="140px"
            android:height="50px"
            android:text="@string/back"
            android:textSize="20sp"
            android:onClick="goBackToMain"/>

    </RelativeLayout>

</RelativeLayout>
