<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->


<!--xmlns:tools="http://schemas.android.com/tools"--><!--android:orientation="vertical"--><!--android:layout_width="fill_parent"--><!--android:layout_height="fill_parent"--><!--android:paddingLeft="@dimen/activity_horizontal_margin"--><!--android:paddingRight="@dimen/activity_horizontal_margin"--><!--android:paddingTop="@dimen/activity_vertical_margin"--><!--tools:context="wildlogic.fishlog.GetWeatherActivity">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wildlogic.fishlog.GetWeatherActivity">
    <!--tools:context="ah.hathi.simpleweather.WeatherActivity$PlaceholderFragment">-->


    <!--<TextView-->
    <!--android:id="@+id/weather_icon"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:textSize="70sp"-->
    <!--/>-->


    <!--<TextView-->
    <!--android:id="@+id/city"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/cur_weather_conds"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />


    <TextView
        android:id="@+id/cur_cond_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/summary"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <!--//android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->


    <TextView
        android:id="@+id/cur_cond_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cur_cond_string"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/cur_temp_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cur_cond_field"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/curr_temp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/current_temperature_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cur_temp_string"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <!--android:textSize="40sp" />-->

    <TextView
        android:id="@+id/cloud_cover_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_temperature_field"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/cloud_cover"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cloud_cover_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cloud_cover_string"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <!--android:textSize="13sp" />-->

    <TextView
        android:id="@+id/wind_speed_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cloud_cover_field"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/wind_speed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/wind_speed_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wind_speed_string"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <!--android:layout_below="@+id/weather_icon"-->

    <TextView
        android:id="@+id/precip_chance_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wind_speed_field"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/precip_chance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/precip_chance_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/precip_chance_string"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/pictureButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"


            android:width="140px"
            android:height="50px"
            android:text="@string/back"
            android:textSize="20sp"
            android:onClick="goBackToMain"/>

        <!--android:layout_below="@+id/precip_chance_field"-->

    </RelativeLayout>
</RelativeLayout>


    <!--</LinearLayout>-->