<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wildlogic.fishlog.ManageFriendsActivity">


    <TextView
        android:id="@+id/manageFriendsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/manage_friends"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <Button
        android:id="@+id/sendFriendRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manageFriendsTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="13dp"
        android:height="70px"
        android:width="340px"
        android:onClick="beginSendRequest"
        android:text="@string/send_request"
        android:textSize="28sp"/>


    <Button
        android:id="@+id/viewFreindsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendFriendRequestButton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:height="70px"
        android:width="340px"
        android:onClick="viewFriends"
        android:text="@string/view_friends"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/RemoveFriendRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFreindsButton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:height="70px"
        android:width="340px"
        android:onClick="beginRemoveFriend"
        android:text="@string/remove_friend"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/ViewIncomingRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RemoveFriendRequestButton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="13dp"
        android:height="100px"
        android:width="340px"
        android:onClick="beginViewIncomingRequest"
        android:text="@string/view_requests"
        android:textSize="28sp"/>

    <RelativeLayout
        android:id="@+id/sendRequestLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/manageFriendsTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/enterUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/enter_user"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:textSize="28sp" />


        <EditText
            android:id="@+id/sendRequestEditField"
            android:layout_centerHorizontal="true"
            android:background="@layout/border"
            android:enabled="true"
            android:gravity="center"
            android:layout_below="@+id/enterUserText"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:minWidth="150dp"/>



        <Button
            android:id="@+id/SendFinalRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sendRequestEditField"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:height="70px"
            android:width="340px"
            android:onClick="completeRequestFriend"
            android:text="@string/send_request"
            android:textSize="28sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewFriendsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manageFriendsTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/viewFriendsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/my_friends"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:textSize="36sp"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/viewFriendsList"
            android:layout_centerHorizontal="true"
            android:background="@layout/border"
            android:enabled="true"
            android:gravity="center"
            android:layout_below="@+id/viewFriendsText"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
/>

        <TextView
            android:id="@+id/pendingRequestsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/pending_request"
            android:layout_below="@+id/viewFriendsList"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:textSize="36sp" />


        <TextView
            android:id="@+id/pendingRequestsList"
            android:layout_centerHorizontal="true"
            android:background="@layout/border"
            android:enabled="true"
            android:gravity="center"
            android:layout_below="@+id/pendingRequestsText"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/removeFreindLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/manageFriendsTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/removeFreindText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/remove_friend"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:textSize="36sp" />

        <Spinner
            android:id="@+id/removeFriendSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/removeFreindText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@layout/border"
            android:textSize="28sp"
            android:layout_marginBottom="10dip" />

        <Button
            android:id="@+id/deleteFriendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/removeFriendSpinner"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:height="70px"
            android:width="340px"
            android:onClick="completeDeleteFriendClicked"
            android:text="@string/delete_friend"
            android:textSize="28sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/acceptPendingRequestLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/manageFriendsTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/acceptPendingRequestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/select_pending_request"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:textSize="36sp" />

        <Spinner
            android:id="@+id/acceptPendingRequestSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acceptPendingRequestText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@layout/border"
            android:textSize="28sp"
            android:layout_marginBottom="10dip" />

        <Button
            android:id="@+id/acceptPendingRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acceptPendingRequestSpinner"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:height="70px"
            android:width="340px"
            android:onClick="completeAcceptPendingRequest"
            android:text="@string/accept_pending_request"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/declinePendingRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acceptPendingRequestButton"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:height="70px"
            android:width="340px"
            android:onClick="declinePendingRequest"
            android:text="@string/decline_pending_request"
            android:textSize="28sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/backButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:width="140px"
            android:height="50px"
            android:text="@string/back"
            android:textSize="20sp"
            android:onClick="goBackToMain"/>
    </RelativeLayout>
</RelativeLayout>